[package]
name = "funnymania"
version = "0.1.0"
authors = ["ec2-user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.19.1", features = ["with-uuid-0_8"] }
rand = "0.8.3"
uuid = { version = "0.8", features = ["v4"] }
lettre = "0.10.0-rc.3"

[features]
default = []
email = []
